--- a/app/src/main/res/layout/layout_time_picker_dialog.xml
+++ b/app/src/main/res/layout/layout_time_picker_dialog.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent">
 
     <TimePicker
+        android:id="@+id/time_picker"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/time_picker">
+        android:layout_height="match_parent">
 
     </TimePicker>
 
